samples/_failures_safe/1761627709_4ea7bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6a2564f.c: In function ‘main’:
./samples/SAFE/__tmp_a6a2564f.c:150:5: error: expected expression at end of input
  150 |     sm.data_count =
      |     ^~
./samples/SAFE/__tmp_a6a2564f.c:150:5: error: expected declaration or statement at end of input
